0.12.2/_sources/gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/plot_pca_iris.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/plot_pca_iris.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gettingstarted_examples_gallery_auto_examples_analysis_a_decomposition_plot_pca_iris.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gettingstarted_examples_gallery_auto_examples_analysis_a_decomposition_plot_pca_iris.py:


PCA example (iris dataset)
--------------------------
In this example, we perform the PCA dimensionality reduction of the classical `iris`
dataset (Ronald A. Fisher.
"The Use of Multiple Measurements in Taxonomic Problems. Annals of Eugenics, 7, pp.179-188, 1936).

.. GENERATED FROM PYTHON SOURCE LINES 17-18

Load the SpectroChemPy API package

.. GENERATED FROM PYTHON SOURCE LINES 18-20

.. code-block:: default

    import spectrochempy as scp








.. GENERATED FROM PYTHON SOURCE LINES 21-23

Load the Iris dataset
---------------------

.. GENERATED FROM PYTHON SOURCE LINES 23-25

.. code-block:: default

    dataset = scp.load_iris()








.. GENERATED FROM PYTHON SOURCE LINES 26-30

Fit a PCA model with automatic component selection
---------------------------------------------------
Using ``n_components="mle"``, the optimal number of components is determined
automatically. Note: `"mle"` cannot be used when n_observations < n_features.

.. GENERATED FROM PYTHON SOURCE LINES 30-33

.. code-block:: default

    pca = scp.PCA(n_components="mle")
    _ = pca.fit(dataset)








.. GENERATED FROM PYTHON SOURCE LINES 34-35

The number of components found is 3:

.. GENERATED FROM PYTHON SOURCE LINES 35-37

.. code-block:: default

    pca.n_components





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    3



.. GENERATED FROM PYTHON SOURCE LINES 38-39

It explains 99.5% of the variance:

.. GENERATED FROM PYTHON SOURCE LINES 39-41

.. code-block:: default

    pca.cumulative_explained_variance[-1].value






.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    99.47878161267253 %
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 42-45

Fit a PCA model with a variance threshold
-------------------------------------------
We can also specify the amount of explained variance directly:

.. GENERATED FROM PYTHON SOURCE LINES 45-48

.. code-block:: default

    pca = scp.PCA(n_components=0.999)
    _ = pca.fit(dataset)








.. GENERATED FROM PYTHON SOURCE LINES 49-50

This time 4 components are found:

.. GENERATED FROM PYTHON SOURCE LINES 50-52

.. code-block:: default

    pca.n_components





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    4



.. GENERATED FROM PYTHON SOURCE LINES 53-56

Inspect the loadings and scores
--------------------------------
The 4 components (loadings) are accessible via ``pca.components``:

.. GENERATED FROM PYTHON SOURCE LINES 56-59

.. code-block:: default

    loadings = pca.components
    loadings






.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <div class="scp-output"><details><summary>NDDataset [`IRIS` Dataset_PCA.components] — float64, shape: (k:4, x:4)</summary>
    <div class="scp-output section"><div class="attr-name">name</div><div>:</div><div class="attr-value">`IRIS` Dataset_PCA.components</div></div>
    <div class="scp-output section"><div class="attr-name">author</div><div>:</div><div class="attr-value">runner@runnervmzvulz</div></div>
    <div class="scp-output section"><div class="attr-name">created</div><div>:</div><div class="attr-value">2026-08-16 02:58:58+00:00</div></div>
    <div class="scp-output section"><div class="attr-name">history</div><div>:</div><div class="attr-value">2026-08-16 02:58:58+00:00> Created using method PCA.components</div></div>
    <div class="scp-output section"><details><summary>Data</summary>
    <div class="scp-output section"><div class="attr-name">title</div><div>:</div><div class="attr-value">size</div></div>
    <div class="scp-output section"><div class="attr-name">values</div><div>:</div><div class="attr-value"> <div class="numeric">[[  0.3614 -0.08452   0.8567   0.3583]<br/> [  0.6566   0.7302  -0.1734 -0.07548]<br/> [  -0.582   0.5979  0.07624   0.5458]<br/> [  0.3155  -0.3197  -0.4798   0.7537]]</div></div></div>
    <div class="scp-output section"><div class="attr-name">shape</div><div>:</div><div class="attr-value">(k:4, x:4)</div></div>
    </details></div>
    <div class="scp-output section"><details><summary>Dimension `k`</summary>
    <div class="scp-output section"><div class="attr-name">size</div><div>:</div><div class="attr-value">4</div></div>
    <div class="scp-output section"><div class="attr-name">title</div><div>:</div><div class="attr-value">components</div></div>
    <div class="scp-output section"><div class="attr-name">labels</div><div>:</div><div class="attr-value"> <div class="label">[  PC1   PC2   PC3   PC4]</div></div></div>
    </details></div>
    <div class="scp-output section"><details><summary>Dimension `x`</summary>
    <div class="scp-output section"><div class="attr-name">size</div><div>:</div><div class="attr-value">4</div></div>
    <div class="scp-output section"><div class="attr-name">title</div><div>:</div><div class="attr-value">features</div></div>
    <div class="scp-output section"><div class="attr-name">labels</div><div>:</div><div class="attr-value"> <div class="label">[  sepal_length   sepal width   petal_length   petal_width]</div></div></div>
    </details></div>
    </details></div>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 60-61

or equivalently via ``pca.loadings``:

.. GENERATED FROM PYTHON SOURCE LINES 61-63

.. code-block:: default

    pca.loadings






.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <div class="scp-output"><details><summary>NDDataset [`IRIS` Dataset_PCA.get_components] — float64, shape: (k:4, x:4)</summary>
    <div class="scp-output section"><div class="attr-name">name</div><div>:</div><div class="attr-value">`IRIS` Dataset_PCA.get_components</div></div>
    <div class="scp-output section"><div class="attr-name">author</div><div>:</div><div class="attr-value">runner@runnervmzvulz</div></div>
    <div class="scp-output section"><div class="attr-name">created</div><div>:</div><div class="attr-value">2026-08-16 02:58:58+00:00</div></div>
    <div class="scp-output section"><div class="attr-name">history</div><div>:</div><div class="attr-value">2026-08-16 02:58:58+00:00> Created using method PCA.get_components</div></div>
    <div class="scp-output section"><details><summary>Data</summary>
    <div class="scp-output section"><div class="attr-name">title</div><div>:</div><div class="attr-value"><untitled></div></div>
    <div class="scp-output section"><div class="attr-name">values</div><div>:</div><div class="attr-value"> <div class="numeric">[[  0.3614 -0.08452   0.8567   0.3583]<br/> [  0.6566   0.7302  -0.1734 -0.07548]<br/> [  -0.582   0.5979  0.07624   0.5458]<br/> [  0.3155  -0.3197  -0.4798   0.7537]]</div></div></div>
    <div class="scp-output section"><div class="attr-name">shape</div><div>:</div><div class="attr-value">(k:4, x:4)</div></div>
    </details></div>
    <div class="scp-output section"><details><summary>Dimension `k`</summary>
    <div class="scp-output section"><div class="attr-name">size</div><div>:</div><div class="attr-value">4</div></div>
    <div class="scp-output section"><div class="attr-name">title</div><div>:</div><div class="attr-value">components</div></div>
    <div class="scp-output section"><div class="attr-name">labels</div><div>:</div><div class="attr-value"> <div class="label">[  PC1   PC2   PC3   PC4]</div></div></div>
    </details></div>
    <div class="scp-output section"><details><summary>Dimension `x`</summary>
    <div class="scp-output section"><div class="attr-name">size</div><div>:</div><div class="attr-value">4</div></div>
    <div class="scp-output section"><div class="attr-name">title</div><div>:</div><div class="attr-value">features</div></div>
    <div class="scp-output section"><div class="attr-name">labels</div><div>:</div><div class="attr-value"> <div class="label">[  sepal_length   sepal width   petal_length   petal_width]</div></div></div>
    </details></div>
    </details></div>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 64-65

To reduce the data to a lower dimensionality, use ``transform``:

.. GENERATED FROM PYTHON SOURCE LINES 65-68

.. code-block:: default

    scores = pca.transform()
    scores






.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <div class="scp-output"><details><summary>NDDataset [`IRIS` Dataset_PCA.transform] — float64, shape: (y:150, k:4)</summary>
    <div class="scp-output section"><div class="attr-name">name</div><div>:</div><div class="attr-value">`IRIS` Dataset_PCA.transform</div></div>
    <div class="scp-output section"><div class="attr-name">author</div><div>:</div><div class="attr-value">runner@runnervmzvulz</div></div>
    <div class="scp-output section"><div class="attr-name">created</div><div>:</div><div class="attr-value">2026-08-16 02:58:58+00:00</div></div>
    <div class="scp-output section"><div class="attr-name">history</div><div>:</div><div class="attr-value">2026-08-16 02:58:58+00:00> Created using method PCA.transform</div></div>
    <div class="scp-output section"><details><summary>Data</summary>
    <div class="scp-output section"><div class="attr-name">title</div><div>:</div><div class="attr-value"><untitled></div></div>
    <div class="scp-output section"><div class="attr-name">values</div><div>:</div><div class="attr-value"> <div class="numeric">[[  -2.684   0.3194 -0.02791 0.002262]<br/> [  -2.714   -0.177  -0.2105  0.09903]<br/> ...<br/> [   1.901   0.1166   0.7233   0.0446]<br/> [    1.39  -0.2827   0.3629   -0.155]]</div></div></div>
    <div class="scp-output section"><div class="attr-name">shape</div><div>:</div><div class="attr-value">(y:150, k:4)</div></div>
    </details></div>
    <div class="scp-output section"><details><summary>Dimension `k`</summary>
    <div class="scp-output section"><div class="attr-name">size</div><div>:</div><div class="attr-value">4</div></div>
    <div class="scp-output section"><div class="attr-name">title</div><div>:</div><div class="attr-value">components</div></div>
    <div class="scp-output section"><div class="attr-name">labels</div><div>:</div><div class="attr-value"> <div class="label">[  PC1   PC2   PC3   PC4]</div></div></div>
    </details></div>
    <div class="scp-output section"><details><summary>Dimension `y`</summary>
    <div class="scp-output section"><div class="attr-name">size</div><div>:</div><div class="attr-value">150</div></div>
    <div class="scp-output section"><div class="attr-name">title</div><div>:</div><div class="attr-value">samples</div></div>
    <div class="scp-output section"><div class="attr-name">labels</div><div>:</div><div class="attr-value"> <div class="label">[  setosa   setosa ...   virginica   virginica]</div></div></div>
    </details></div>
    </details></div>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 69-70

The scores are also available directly via ``pca.scores``:

.. GENERATED FROM PYTHON SOURCE LINES 70-73

.. code-block:: default

    scores = pca.scores
    scores






.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <div class="scp-output"><details><summary>NDDataset [`IRIS` Dataset_PCA.transform] — float64, shape: (y:150, k:4)</summary>
    <div class="scp-output section"><div class="attr-name">name</div><div>:</div><div class="attr-value">`IRIS` Dataset_PCA.transform</div></div>
    <div class="scp-output section"><div class="attr-name">author</div><div>:</div><div class="attr-value">runner@runnervmzvulz</div></div>
    <div class="scp-output section"><div class="attr-name">created</div><div>:</div><div class="attr-value">2026-08-16 02:58:58+00:00</div></div>
    <div class="scp-output section"><div class="attr-name">history</div><div>:</div><div class="attr-value">2026-08-16 02:58:58+00:00> Created using method PCA.transform</div></div>
    <div class="scp-output section"><details><summary>Data</summary>
    <div class="scp-output section"><div class="attr-name">title</div><div>:</div><div class="attr-value"><untitled></div></div>
    <div class="scp-output section"><div class="attr-name">values</div><div>:</div><div class="attr-value"> <div class="numeric">[[  -2.684   0.3194 -0.02791 0.002262]<br/> [  -2.714   -0.177  -0.2105  0.09903]<br/> ...<br/> [   1.901   0.1166   0.7233   0.0446]<br/> [    1.39  -0.2827   0.3629   -0.155]]</div></div></div>
    <div class="scp-output section"><div class="attr-name">shape</div><div>:</div><div class="attr-value">(y:150, k:4)</div></div>
    </details></div>
    <div class="scp-output section"><details><summary>Dimension `k`</summary>
    <div class="scp-output section"><div class="attr-name">size</div><div>:</div><div class="attr-value">4</div></div>
    <div class="scp-output section"><div class="attr-name">title</div><div>:</div><div class="attr-value">components</div></div>
    <div class="scp-output section"><div class="attr-name">labels</div><div>:</div><div class="attr-value"> <div class="label">[  PC1   PC2   PC3   PC4]</div></div></div>
    </details></div>
    <div class="scp-output section"><details><summary>Dimension `y`</summary>
    <div class="scp-output section"><div class="attr-name">size</div><div>:</div><div class="attr-value">150</div></div>
    <div class="scp-output section"><div class="attr-name">title</div><div>:</div><div class="attr-value">samples</div></div>
    <div class="scp-output section"><div class="attr-name">labels</div><div>:</div><div class="attr-value"> <div class="label">[  setosa   setosa ...   virginica   virginica]</div></div></div>
    </details></div>
    </details></div>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 74-75

The explained and cumulative variance can be printed:

.. GENERATED FROM PYTHON SOURCE LINES 75-77

.. code-block:: default

    pca.printev()








.. GENERATED FROM PYTHON SOURCE LINES 78-81

Visualize the results
----------------------
The scree plot shows the explained variance per component:

.. GENERATED FROM PYTHON SOURCE LINES 81-83

.. code-block:: default

    _ = pca.plot_scree()




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/images/sphx_glr_plot_pca_iris_001.png
   :alt: Scree plot
   :srcset: /gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/images/sphx_glr_plot_pca_iris_001.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 84-85

The 2D score plot (first 2 PCs) separates Iris-setosa from the other species:

.. GENERATED FROM PYTHON SOURCE LINES 85-87

.. code-block:: default

    _ = pca.plot_score(color_mapping="labels")




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/images/sphx_glr_plot_pca_iris_002.png
   :alt: plot pca iris
   :srcset: /gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/images/sphx_glr_plot_pca_iris_002.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 88-90

The 3D score plot (first 3 PCs) shows that a third PC does not further
distinguish versicolor from virginica:

.. GENERATED FROM PYTHON SOURCE LINES 90-93

.. code-block:: default

    ax = pca.plot_score(components=(1, 2, 3), color_mapping="labels")
    ax.view_init(10, 75)




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/images/sphx_glr_plot_pca_iris_003.png
   :alt: plot pca iris
   :srcset: /gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/images/sphx_glr_plot_pca_iris_003.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 94-96

This ends the example ! The following line can be uncommented if no plot shows when
running the .py script with python

.. GENERATED FROM PYTHON SOURCE LINES 96-98

.. code-block:: default


    # scp.show()








.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  0.703 seconds)


.. _sphx_glr_download_gettingstarted_examples_gallery_auto_examples_analysis_a_decomposition_plot_pca_iris.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example




    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_pca_iris.py <plot_pca_iris.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_pca_iris.ipynb <plot_pca_iris.ipynb>`
